Minor text revisions, fixed 'offline header' spacing, grey options when offline for home screen

--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -4,5 +4,6 @@
 }
 
 .header-container {
-	height: 10vh;
+	position: absolute;
+	width: 100%;
 }
