--- a/client/src/components/HomePage/ColorOption/ColorOptionStyle.css
+++ b/client/src/components/HomePage/ColorOption/ColorOptionStyle.css
@@ -3,5 +3,4 @@
 	height: 1rem;
 	width: 5rem;
 	border-radius: 10px;
-	cursor: pointer;
 }
